clear token in config

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token" : "ODgwMTkwNzYyNDY4Mzk3MDU3.YSarhg.t7mngLP2C0Z8YDseH2AyMPO3G4w",
+  "token" : "",
   "prefix" : "!!",
   "color": "#F4A460"
 }
